# dirtgenie

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.simple  Dockerfile.unified  MANIFEST.in  README.md  README.unified.md  REDESIGN_COMPLETE.md  bikepacking_planner.py  build-unified.sh  docker-compose.unified.yml  docker-compose.yml  docker-entrypoint.sh  load_env.py  nginx.conf  profile.yml  pyproject.toml  railway.json  requirements.txt  setup.py  setup.sh  streamlit_app.py  test_enhanced_prompts.py  test_intelligent_planning.py  test_planner.py  test_web_search.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker.yml
docs/: CLOSED_LOOP_IMPROVEMENTS.md  ENHANCED_WEB_SEARCH.md  EXAMPLE.md
scripts/: demo.py  demo_overnight_markers.py  dirtgenie  dirtgenie-web  show_improvements.py
src/dirtgenie/: __init__.py  planner.py  web_app.py
tests/: __init__.py  test_closed_loop.py  test_enhanced_prompts.py  test_improved_closed_loop.py  test_intelligent_planning.py  test_overnight_location_fix.py  test_planner.py  test_profile_functionality.py  test_real_api.py  test_web_search.py
trips/cabin-to-home/: profile.yml  report.md  route.geojson
web/: .gitignore  Dockerfile.unified  QUICKSTART.md  README.md  README.unified.md  build-unified.sh  docker-compose.unified.yml  docker-compose.yml  nginx.conf  start-unified.sh  start.sh  supervisord.conf
web/backend/: main.py  requirements.txt
web/frontend/: package-lock.json  package.json
web/frontend/public/: index.html  manifest.json
web/frontend/src/: App.tsx  index.css
web/frontend/src/components/: ApiKeySetup.tsx  CookingLoader.tsx  Login.tsx  RouteMap.tsx  Sidebar.tsx  TripPlannerForm.tsx  TripResults.tsx  TripRevisionModal.tsx
(+2 files in other folders)
