[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dirtgenie"
version = "0.1.0"
description = "AI-Powered Bikepacking Trip Planner"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Alex Wallar", email = "alex@wallar.me" }]
keywords = ["bikepacking", "trip-planning", "ai", "cycling", "travel"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Other/Nonlisted Topic",
]
dependencies = [
    "openai>=1.0.0",
    "googlemaps>=4.10.0",
    "pyyaml>=6.0",
    "polyline>=2.0.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.28.0",
    "pydeck>=0.8.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=6.0", "pytest-cov", "black", "flake8", "mypy"]

[project.urls]
Homepage = "https://github.com/a20r/DirtGenie"
Repository = "https://github.com/a20r/DirtGenie.git"
Issues = "https://github.com/a20r/DirtGenie/issues"

[project.scripts]
dirtgenie = "dirtgenie.planner:main"
dirtgenie-web = "dirtgenie.web_app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
